Added a navbar for mobile devices

--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -36,7 +36,7 @@
   </div>
   </div>
   </div>
-  <div class="col-md-12 col-lg-4">
+  <div class="col-md-12 col-lg-4 mt-3">
   <div class="card shadow-lg w-100">
         <div class="card-body">
           <h2 class="text-primary">Top donators</h2>
@@ -59,7 +59,7 @@
           </table>
         </div>
       </div>
-      <div class="text-center mt-5">
+      <div class="text-center mt-2 buttons-container">
         <%= link_to "Back to Charities", charities_path, class: "btn btn-primary mx-3" %>
         <%= link_to "Donate", new_charity_donation_path(@charity), class: "btn btn-primary mx-3" %>
       </div>
