--- a/app/views/charities/index.html.erb
+++ b/app/views/charities/index.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <%# Charities grid  %>
-<div class="cards container my-4">
+<div class="cards container card-container">
   <% @charities.each do |charity| %>
     <a href="<%= charity_path(charity) %>">
       <div class="index-card">
